--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
   "dependencies": {
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^5.0.0",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^22.13.4",
+    "@types/uuid": "^10.0.0",
+    "chalk": "^5.4.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "inquirer": "^12.4.1",
     "irc-server": "^0.0.4",
+    "morgan": "^1.10.0",
     "openai": "^4.83.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3",
+    "uuid": "^11.0.5",
     "ws": "^8.18.0"
   }
 }
