--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "nschat",
+  "version": "1.0.0",
+  "description": "Chat server with LLM integration",
+  "main": "server.ts",
+  "type": "module",
+  "scripts": {
+    "start": "bun run server.ts",
+    "dev": "bun --watch server.ts",
+    "build": "bun build server.ts --outdir dist"
+  },
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/better-sqlite3": "^7.6.12",
@@ -19,6 +29,19 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "uuid": "^11.0.5",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "bull": "^4.12.2",
+    "redis": "^4.6.13"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/better-sqlite3": "^7.6.9",
+    "@types/bull": "^4.10.0",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.24",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "bun-types": "latest"
   }
 }
