refactor: Restructure server code and improve error handling
Major code organization and type safety improvements:

- Split server code into modular components
  - Move routes to dedicated files under server/routes/
  - Create separate auth, chat, and participants routers
  - Extract SSE utilities to server/utils/sse.ts
  - Update imports to reflect new structure

- Improve error handling and type safety
  - Better error handling in chat core functionality
  - Add type narrowing for AbortError checks
  - Improve metadata parsing with type guards
  - Remove unnecessary type assertions
  - Better null handling in database results

- Update file paths and organization
  - Move main server code to server/index.ts
  - Update static file serving paths
  - Fix client directory references
  - Update package.json entry points
  - Clean up imports

- Code quality improvements
  - Remove duplicate code in route handlers
  - Better separation of concerns
  - More consistent error handling patterns
  - Cleaner route organization
  - Better type definitions

The refactoring improves code maintainability and type safety while
keeping the same functionality. The modular structure makes it easier
to add new features and test components independently.

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "nschat",
   "version": "1.0.0",
   "description": "Chat server with LLM integration",
-  "main": "server.ts",
+  "main": "server/index.ts",
   "type": "module",
   "scripts": {
-    "start": "bun run server.ts",
-    "dev": "bun --watch server.ts",
-    "build": "bun build server.ts --outdir dist"
+    "start": "bun run server/index.ts",
+    "dev": "bun --watch server/index.ts",
+    "build": "bun build server/index.ts --outdir dist"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
