refactor: rename project from NSChat to N.O.R.T.
- Update project name across all files
- Revise README.md with new features and architecture details
- Update package.json and package-lock.json
- Modify database and client references
- Add expanded API endpoint documentation

The new name N.O.R.T. stands for "Nexial Oracle Reasoning Traverser"

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nschat",
+  "name": "nort",
   "version": "1.0.0",
   "description": "Chat server with LLM integration",
   "main": "server/index.ts",
