feat: enhance chat UI and message targeting system
- Add profile pictures and message headers with participant names
- Implement message styling based on current persona
- Add revert functionality to messages with shift-click option
- Enhance message formatting with bold/italic support
- Implement message targeting system with <TO id=X> format
- Add abort controller for canceling active generations
- Increase timeout to 2 minutes and set max tokens to 333
- Update message validation to handle new targeting format

--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "build": "bun build server/index.ts --outdir dist"
   },
   "dependencies": {
+    "@types/dompurify": "^3.2.0",
+    "@types/marked": "^6.0.0",
     "bcrypt": "^5.1.1",
     "bull": "^4.12.2",
+    "dompurify": "^3.2.4",
     "express": "^4.21.2",
+    "marked": "^15.0.7",
     "openai": "^4.83.0",
     "redis": "^4.6.13"
   },
